Add InputDoublePropertyIntRangeTest and InputDoublePropertyTest